// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`happy path отвечает правильно 1`] = `
Array [
  Object {
    "display_name": "Тестовичок Тестовый Тестовичус 11111111111111111",
    "email": "testovichok2016@yandex.ru",
    "highlights": Object {
      "display_name": Array [],
      "email": Array [
        Object {
          "e": 4,
          "s": 0,
        },
      ],
      "show_text": Array [
        Object {
          "e": 55,
          "s": 51,
        },
        Object {
          "e": 112,
          "s": 108,
        },
      ],
    },
    "id": "c0d7a49efc21478caf87e6e07d432a86",
    "ref": "16e65d6fc060947b87f0890074a2755b",
    "search_params": Object {},
    "search_text": "testovichok2016@yandex.ru",
    "show_text": "\\"Тестовичок Тестовый Тестовичус 11111111111111111\\" testovichok2016@yandeтовый Тестовичус 11111111111111111\\" testovichok2016@yandex.ru",
    "target": "contact",
    "unread_cnt": 0,
  },
  Object {
    "display_name": "Имя Фамилия",
    "email": "test-smart-banner@yandex.ru",
    "highlights": Object {
      "display_name": Array [],
      "email": Array [
        Object {
          "e": 4,
          "s": 0,
        },
      ],
      "show_text": Array [
        Object {
          "e": 18,
          "s": 14,
        },
      ],
    },
    "id": "ca4732c9f75c2ca45cc5e5e42f6c93e8",
    "ref": "ecab525acb265277442b679587404121",
    "search_params": Object {},
    "search_text": "test-smart-banner@yandex.ru",
    "show_text": "\\"Имя Фамилия\\" test-smart-banner@yandex.ru",
    "target": "contact",
    "unread_cnt": 0,
  },
  Object {
    "highlights": Object {
      "show_text": Array [
        Object {
          "e": 4,
          "s": 0,
        },
      ],
    },
    "id": "0dfb08e6dcc3b8f659173a5dd9f59f8d",
    "mail-count": 2,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "\\"test link 2\\"",
    "show_text": "test link 2",
    "target": "subject",
  },
  Object {
    "highlights": Object {
      "show_text": Array [
        Object {
          "e": 4,
          "s": 0,
        },
      ],
    },
    "id": "adc15b43161f28d77122d6cccc3f2c5c",
    "mail-count": 1,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "\\"Test link\\"",
    "show_text": "Test link",
    "target": "subject",
  },
  Object {
    "highlights": Object {
      "show_text": Array [
        Object {
          "e": 4,
          "s": 0,
        },
      ],
    },
    "id": "635655665936c588effa26da28127092",
    "mail-count": 1,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "\\"test disk attaches\\"",
    "show_text": "test disk attaches",
    "target": "subject",
  },
  Object {
    "highlights": Object {
      "show_text": Array [
        Object {
          "e": 4,
          "s": 0,
        },
      ],
    },
    "id": "412763040ddbb503cabf7b8ead2e973d",
    "mail-count": 1,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "test",
    "show_text": "test",
    "target": "subject",
  },
  Object {
    "highlights": Object {
      "show_text": Array [
        Object {
          "e": 4,
          "s": 0,
        },
      ],
    },
    "id": "297f6d78fbf207edb65ee844ce71a848",
    "mail-count": 49,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "\\"test chat\\"",
    "show_text": "test chat",
    "target": "subject",
  },
]
`;

exports[`happy path отвечает правильно с html-хайлайтом 1`] = `
Array [
  Object {
    "display_name": "Тестовичок Тестовый Тестовичус 11111111111111111",
    "email": "testovichok2016@yandex.ru",
    "highlights": Object {
      "display_name": "Тестовичок Тестовый Тестовичус 11111111111111111",
      "email": "<span class=\\"msearch-highlight\\">test</span>ovichok2016@yandex.ru",
      "show_text": "\\"Тестовичок Тестовый Тестовичус 11111111111111111\\" <span class=\\"msearch-highlight\\">test</span>ovichok2016@yandeтовый Тестовичус 11111111111111111\\" <span class=\\"msearch-highlight\\">test</span>ovichok2016@yandex.ru",
    },
    "id": "c0d7a49efc21478caf87e6e07d432a86",
    "ref": "16e65d6fc060947b87f0890074a2755b",
    "search_params": Object {},
    "search_text": "testovichok2016@yandex.ru",
    "show_text": "\\"Тестовичок Тестовый Тестовичус 11111111111111111\\" testovichok2016@yandeтовый Тестовичус 11111111111111111\\" testovichok2016@yandex.ru",
    "target": "contact",
    "unread_cnt": 0,
  },
  Object {
    "display_name": "Имя Фамилия",
    "email": "test-smart-banner@yandex.ru",
    "highlights": Object {
      "display_name": "Имя Фамилия",
      "email": "<span class=\\"msearch-highlight\\">test</span>-smart-banner@yandex.ru",
      "show_text": "\\"Имя Фамилия\\" <span class=\\"msearch-highlight\\">test</span>-smart-banner@yandex.ru",
    },
    "id": "ca4732c9f75c2ca45cc5e5e42f6c93e8",
    "ref": "ecab525acb265277442b679587404121",
    "search_params": Object {},
    "search_text": "test-smart-banner@yandex.ru",
    "show_text": "\\"Имя Фамилия\\" test-smart-banner@yandex.ru",
    "target": "contact",
    "unread_cnt": 0,
  },
  Object {
    "highlights": Object {
      "show_text": "<span class=\\"msearch-highlight\\">test</span> link 2",
    },
    "id": "0dfb08e6dcc3b8f659173a5dd9f59f8d",
    "mail-count": 2,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "\\"test link 2\\"",
    "show_text": "test link 2",
    "target": "subject",
  },
  Object {
    "highlights": Object {
      "show_text": "<span class=\\"msearch-highlight\\">Test</span> link",
    },
    "id": "adc15b43161f28d77122d6cccc3f2c5c",
    "mail-count": 1,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "\\"Test link\\"",
    "show_text": "Test link",
    "target": "subject",
  },
  Object {
    "highlights": Object {
      "show_text": "<span class=\\"msearch-highlight\\">test</span> disk attaches",
    },
    "id": "635655665936c588effa26da28127092",
    "mail-count": 1,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "\\"test disk attaches\\"",
    "show_text": "test disk attaches",
    "target": "subject",
  },
  Object {
    "highlights": Object {
      "show_text": "<span class=\\"msearch-highlight\\">test</span>",
    },
    "id": "412763040ddbb503cabf7b8ead2e973d",
    "mail-count": 1,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "test",
    "show_text": "test",
    "target": "subject",
  },
  Object {
    "highlights": Object {
      "show_text": "<span class=\\"msearch-highlight\\">test</span> chat",
    },
    "id": "297f6d78fbf207edb65ee844ce71a848",
    "mail-count": 49,
    "search_params": Object {
      "scope": "hdr_subject_keyword",
    },
    "search_text": "\\"test chat\\"",
    "show_text": "test chat",
    "target": "subject",
  },
]
`;
